--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,6 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
   broker:
     image: confluentinc/cp-kafka:7.3.0
-    container_name: broker
     ports:
       - "9092:9092"
     depends_on:
@@ -37,8 +36,6 @@ services:
     build: ./services/auth
     volumes:
       - ./services/auth:/app
-    expose:
-      - 7890
     ports:
       - 7894:7894
       
@@ -46,7 +43,41 @@ services:
     build: ./services/search
     volumes:
       - ./services/search:/app
-    expose:
-      - 7893
     ports:
       - 7895:7895
+
+  # databases
+  pgdb: 
+    image: postgres:14.6-alpine
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=admin
+    ports:
+      - 5433:5432
+    volumes:
+      - pgdb_vol:/var/lib/postgresql/data
+      - ./database:/docker-entrypoint-initdb.d # instead of starting multiple instance that hog all my computer resources I created this script that easily create the databases required
+    command: postgres -c listen_addresses='*' 
+
+  search_db:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    environment:
+      - xpack.security.enabled=false # To simplify the developement experience
+      - "discovery.type=single-node" # To simplify the developement experience
+    volumes:
+      - search_db_vol:/usr/share/elasticsearch/data
+    
+  kibana:
+    container_name: kb-container
+    image: docker.elastic.co/kibana/kibana:7.11.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://search_db:9200
+    depends_on:
+      - search_db
+    ports:
+      - 5601:5601
+
+volumes:
+  pgdb_vol:
+  search_db_vol:
+  
