--- a/services/auth/dockerfile
+++ b/services/auth/dockerfile
@@ -4,4 +4,6 @@ EXPOSE 7890 7894
 
 RUN go install github.com/go-delve/delve/cmd/dlv@latest
 
-CMD go build -gcflags "all=-N -l" -o /app/bin/be; /go/bin/dlv --headless=true --listen=:7894 --log=true --accept-multiclient --api-version=2 exec /app/bin/be
+RUN go install github.com/pressly/goose/v3/cmd/goose@v3.8.0
+
+CMD bash /app/scripts/run_migrations.sh; go build -gcflags "all=-N -l" -o /app/bin/be; /go/bin/dlv --headless=true --listen=:7894 --log=true --accept-multiclient --api-version=2 exec /app/bin/be
