--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -7,6 +7,11 @@ http {
 		include      /opt/*.conf;
 		listen       8080;
 	}
+	# for development onLy
+	proxy_read_timeout 1000;
+    proxy_connect_timeout 1000;
+    proxy_send_timeout 1000;
+
 	include      mime.types;
 	default_type application/json;
 }
