feat: add search functionality

--- a/gateway/api/auth.conf
+++ b/gateway/api/auth.conf
@@ -1,5 +1,5 @@
-location /api/auth/search {
-	proxy_pass http://search:7893/api/auth;
+location /api/users/search {
+	proxy_pass http://search:7893/api/users;
 }
 
 location /api/auth {
